src/objects/Opportunity_Application__c.object
<CustomObject>
    <description>Junction object to link Applications to Opportunities</description>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up to the Application object</description>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Opportunity_Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>List of the Application Segments related to the Application</description>
        <label>Market Segment for Application</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Look up to the Opportunity ID</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Opportunity_Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Application</label>
    <nameField>
        <displayFormat>OA-{00000000}</displayFormat>
        <label>Opportunity Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Application</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>